third_party/move/move-compiler-v2/tests/checking/attributes/attribute_num_sign_no_bracket.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/attributes/attribute_num_sign_no_bracket.move:4:5
  │
4 │     fun foo() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '['
